# EZPZ

./: .dockerignore  .gitignore  .prettierrc.json  Cargo.toml  README.md  actions.just  clippy.toml  deny.toml  diesel.toml  docker-compose.yml  ezpz.toml  justfile  pyproject.toml  pyrightconfig.json
api/: Cargo.toml
app/: Cargo.toml  Dioxus.toml  input.css
app/assets/: tailwind.css
app/src/: router.rs
app/src/pages/: home.rs
core/macroz/: README.md  pyproject.toml
core/macroz/painlezz_macroz/visitorz/: macro_metadata_collector.py
core/macroz/tests/: test_macroz.py
core/pluginz/: README.md  ezpz.toml  pyproject.toml
core/pluginz/ezpz_pluginz/: __cli__.py  __init__.py  e_polars_namespace.py  lockfile.py  logger.py  polars_class_provider.py  register_plugin_macro.py  registry.py  toml_schema.py
core/pluginz/ezpz_pluginz/registry/: __init__.py  config.py  exceptions.py  models.py  utils.py
core/pluginz/ezpz_pluginz/registry/reg/: local.py  remote.py
core/pluginz/ezpz_pluginz/templates/: sitecustomize.py.j2
core/pluginz/tests/: test_polars_plugin_collector.py
core/registry/: docker-compose.yml  pyproject.toml
core/registry/docker/postgres/: init.sql
core/registry/ezpz_registry/: config.py  main.py
core/registry/ezpz_registry/api/: deps.py  routes.py  schema.py
core/registry/ezpz_registry/context/: asession.py
core/registry/ezpz_registry/db/: connection.py  models.py
core/registry/ezpz_registry/db/formatter/: __init__.py
core/registry/ezpz_registry/db/types/: http_url.py
core/registry/ezpz_registry/migrations/alembic/: env.py
core/registry/ezpz_registry/services/: plugins.py  pypi.py
crates/app/: .env.example  Cargo.toml  build.rs
crates/app/src/: layout.rs  lib.rs  main.rs  router.rs
crates/ezpz-stubz/: Cargo.toml
crates/ezpz-stubz/src/: frame.rs  lazy.rs
examples/: README.md  pyproject.toml
examples/ezpz_ta/: ezpz_rust_ti.py  standard.py  volatility.py
examples/ezpz_tiz/: README.md  pyproject.toml
ezpz-guiz/: .rustfmt.toml  Cargo.toml  pyproject.toml  t.ipynb
ezpz-guiz/python/ezpz_guiz/: _ezpz_guiz.pyi  _ezpz_guiz_macros.py
ezpz-guiz/src/: lib.rs
ezpz-guiz/src/frame/: mod.rs
ezpz-guiz/src/lazy/: mod.rs
ezpz-guiz/src/lazy/components/: filter.rs  search.rs  theme.rs
ezpz-pluginz/: README.md  pyproject.toml
ezpz-pluginz/ezpz_pluginz/: __init__.py  lockfile.py  polars_class_provider.py  register_plugin_macro.py  test_plugin.py  toml_schema.py
ezpz-rust-ti/: Cargo.toml  README.md  ezpz.toml  pyproject.toml
ezpz-rust-ti/python/ezpz_rust_ti/: __init__.py  _ezpz_rust_ti.pyi  _ezpz_rust_ti_macros.py
ezpz-rust-ti/src/: lib.rs
ezpz-rust-ti/src/indicators/: mod.rs
ezpz-rust-ti/src/indicators/basic/: mod.rs
ezpz-rust-ti/src/indicators/candle/: mod.rs
ezpz-rust-ti/src/indicators/chart/: mod.rs
ezpz-rust-ti/src/indicators/correlation/: mod.rs
ezpz-rust-ti/src/indicators/ma/: mod.rs
ezpz-rust-ti/src/indicators/momentum/: mod.rs
ezpz-rust-ti/src/indicators/other/: mod.rs
ezpz-rust-ti/src/indicators/std_/: mod.rs
ezpz-rust-ti/src/indicators/strength/: mod.rs
ezpz-rust-ti/src/indicators/trend/: mod.rs
ezpz-rust-ti/src/indicators/volatility/: mod.rs
ezpz-rust-ti/src/utils/: mod.rs
ezpz/ezpz-guiz/: Cargo.toml  pyproject.toml
ezpz/ezpz-guiz/python/ezpz_guiz/: _ezpz_guiz.pyi
ezpz/ezpz-guiz/src/: lib.rs  shell.rs
ezpz/ezpz-guiz/src/lazy/: mod.rs  mod_.rs
ezpz/ezpz-guiz/src/lazy/components/: data.rs  layout.rs  mod.rs
ezpz/ezpz-pluginz/: README.md  pyproject.toml
ezpz/ezpz-pluginz/ezpz_pluginz/: __cli__.py  __init__.py  test_plugin.py
ezpz/ezpz-pluginz/ezpz_pluginz/enumz/: e_polars_namespace.py
ezpz/ezpz-pluginz/ezpz_pluginz/macroz/: register_plugin_macro.py
ezpz/ezpz-pluginz/ezpz_pluginz/modelz/: lockfile.py  toml_schema.py
ezpz/ezpz-pluginz/ezpz_pluginz/providerz/: has_type_checking_block.py  polars_class_provider.py
ezpz/ezpz-pluginz/ezpz_pluginz/templates/: sitecustomize.py.j2
ezpz/ezpz-pluginz/tests/: test_polars_plugin_collector.py
ezpz/ezpz-stubz/: Cargo.toml
ezpz/ezpz-stubz/src/: frame.rs  lazy.rs
formatterz/: Cargo.toml  pyproject.toml
formatterz/src/: lib.rs
guiz/: ezpz.toml  pyproject.toml  t.ipynb
guiz/src/frame/: mod.rs
juzt/juzt-gui/: Cargo.toml  README.md  index.html
juzt/juzt-gui/src/: app.rs  lib.rs  main.rs
painlezz/painlezz-basez/: pyproject.toml
painlezz/painlezz-basez/painlezz_basez/: yamlable.py
painlezz/painlezz-macroz/: pyproject.toml
painlezz/painlezz-macroz/painlezz_macroz/macroz/: meta_cls_idea.py  noop.py
painlezz/painlezz-macroz/painlezz_macroz/providerz/: macro_metadata_collector.py
painlezz/painlezz-macroz/painlezz_macroz/v2/: base.py  build_macro.py  decorators.py  e_macro_kind.py  gen_macro.py  meta_data_dto.py  plugin.py.py  registry.py  runtime_macro.py
painlezz/painlezz-macroz/painlezz_macroz/v2/templates/: buildtime_class_transform.py.j2  buildtime_function_transform.py.j2  buildtime_macro.py.j2  dependency_resolution_module.py.j2  generational_macro.py.j2  runtime_macro.py.j2
painlezz/painlezz-macroz/painlezz_macroz/visitorz/: macro_metadata_collector.py
painlezz/painlezz-spiderz/: pyproject.toml
painlezz/painlezz-spiderz/painlezz_spiderz/: async.py  data_schema.py  generate_dfs.py  process_data.py  zoom_zoom.py  zoom_zoom_2.py  zoom_zoom_watchdog.py
painlezz/painlezz-spiderz/painlezz_spiderz/scrappy_spider/: items.py  middlewares.py  monitor_spider.py  pipelines.py  pypi_spider.py  settings.py
painlezz/painlezz-sqlmodelz/: pyproject.toml
painlezz/painlezz-sqlmodelz/painlezz_sqlmodelz/mixinz/database/: enable.py  id.py  soft_delete.py  timestamp.py
painlezz/painlezz-sqlmodelz/painlezz_sqlmodelz/mixinz/polarz/: polars.py  py_type_to_pl_type.py
painlezz/painlezz-sqlmodelz/painlezz_sqlmodelz/typez/: vector.py
plugins/ezpz-rust-ti/: Cargo.toml  README.md  ezpz.toml  pyproject.toml
plugins/ezpz-rust-ti/python/ezpz_rust_ti/: __init__.py  _ezpz_rust_ti.pyi  _ezpz_rust_ti_macros.py  ezpz-lock.yml
plugins/ezpz-rust-ti/src/indicators/basic/: mod.rs
plugins/ezpz-rust-ti/src/utils/: mod.rs
(+118 files in other folders)
