[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "api"
repository = { workspace = true }

[package.metadata.stilts]
template_dir = "$CARGO_MANIFEST_DIR/src"
trim = false

[dependencies]
maestro-anthropic = { workspace = true }


bon = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stilts = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

dioxus = { workspace = true, features = [], default-features = false }

maestro-diesel = { workspace = true, features = ["async"], optional = true }

diesel = { version = "2.2.10", features = ["chrono", "postgres", "serde_json", "uuid"], optional = true }
diesel-async = { version = "0.5.2", features = ["postgres"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }


[features]
dioxus = ["maestro-anthropic/dioxus"]
dioxus-server = ["dioxus", "maestro-diesel/dioxus", "server"]
server = ["dep:diesel", "dep:diesel-async", "dep:diesel-derive-enum", "dep:maestro-diesel", "maestro-anthropic/server"]
